Zadanie 9. (Wzorzec Adapter)