@@ -19,17 +19,38 @@ public class HomeHub{
         return instance;
     }
 
-    public void registerDevice(SmartDevice device) throws DuplicateDeviceException{
-        if(devices.stream().anyMatch(inListDevice -> inListDevice.getId().equals(device.getId()))){
-            throw new DuplicateDeviceException("device with this id or macAddres exist");
+    public void registerDevice(ManageableDevice device) throws DuplicateDeviceException {
+        if (device instanceof SmartDevice newDevice) {
+            boolean duplicate = devices.stream()
+                    .filter(d -> d instanceof SmartDevice)
+                    .map(d -> (SmartDevice) d)
+                    .anyMatch(existing -> existing.getId().equals(newDevice.getId())
+                            || existing.getMacAddress().equals(newDevice.getMacAddress()));
+            if (duplicate) {
+                throw new DuplicateDeviceException("device with this id or macAddres exist");
+            }
         }
         devices.add(device);
     }
 
-    public List<ManageableDevice> getDevicesByRoom(String room){
-        //jak bedzie wywalac blad zalezny od wersji javy to .collect(Collectors.toList())
-        List<SmartDevice> roomList = devices.stream().filter(devicesToFind -> devicesToFind.getRoom().equals(room)).toList();
+    public List<SmartDevice> getDevicesByRoom(String room) {
+        List<SmartDevice> roomList = devices.stream()
+                .filter(d -> d instanceof SmartDevice)
+                .map(d -> (SmartDevice) d)
+                .filter(d -> d.getRoom().equals(room))
+                .collect(Collectors.toList());
         Collections.sort(roomList);
         return roomList;
     }
+/*
+    public List<ManageableDevice> getDevicesByRoom(String room){
+        //jak bedzie wywalac blad zalezny od wersji javy to .collect(Collectors.toList())
+        List<SmartDevice> roomList = devices.stream()
+                .filter(devicesToFind -> devicesToFind
+                        .getRoom().equals(room)).toList();
+        Collections.sort(roomList);
+        return roomList;
+    }
+ */
+
 }
